<resources>
    <string name="app_name">WeatherApp</string>

    <string name="str_name">Find out the weather!</string>

    <string name="menu">On the Main</string>

    <string name="str_btm_weather">Get Weather Now</string>
    <string name="str_btm_generate_weather">Generate weather</string>
    <string name="str_message_not_null">Input city!</string>
    <string name="str_mm_of_mercury">mm.Hg</string>
    <string name="str_pressure">720</string>

    <string name="str_toast_create">onCreate()</string>
    <string name="str_toast_create_get_weather">onCreate()</string>
    <string name="str_toast_resume">"onResume()"</string>
    <string name="str_toast_start">onStart()</string>
    <string name="str_toast_restart">onRestart()</string>
    <string name="str_toast_pause">onPause()</string>
    <string name="str_toast_back_pressed">onBackPressed()</string>
    <string name="str_toast_destroy">onDestroy()</string>
    <string name="str_toast_more_symbol">A lot of symbols!</string>
    <string name="str_degree">C</string>

    <string name="circle">&#176;</string>

    <string name="set_switch">Sun / Cloud</string>
    <string name="set_switch_sun">Sun</string>
    <string name="set_switch_cloud">Cloud</string>
    <string name="set_rain">Rain</string>
    <string name="set_wind">Wind</string>
    <string name="set_fog">Fog</string>


    <string name="empty_string">&#160;</string>
    <string name="position">Position - </string>

    <string name="card_city1">Irkutsk</string>
    <string name="card_city2">Moscow</string>
    <string name="card_city3">Novosibirsk</string>






</resources>
