<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView_set_the_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_textViewTop_main_activity"
        android:gravity="center"
        android:text="@string/str_name"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />


    <LinearLayout
        android:id="@+id/linLay_edit_and_btn"
        android:layout_width="@dimen/width_linearLayout_edit_btn_main_activity"
        android:layout_height="@dimen/height_linearLayout_edit_btn_main_activity"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_editText_main_activity"
            android:layout_gravity="center_horizontal"
            android:ems="10" />

        <Button
            android:id="@+id/btn_get_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_btm_weather"
            android:textAllCaps="false" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_main_activity"
        android:layout_width="@dimen/width_imageView_main_activity"
        android:layout_height="@dimen/height_imageView_main_activity"
        android:layout_marginTop="@dimen/marginTop_imageView_main_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView_set_the_weather"
        app:srcCompat="@drawable/river" />

    <android.support.v7.widget.CardView
        android:id="@+id/city1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_CardView"
        android:layout_margin="@dimen/margin_CardView"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/city2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/linLay_edit_and_btn"
        app:layout_constraintVertical_bias="0.62"
        card_view:cardCornerRadius="@dimen/CornerRadius_CardView"
        card_view:cardElevation="@dimen/Elevation_CardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_TextView_card"
            android:text="@string/card_city1" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/city2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_CardView"
        android:layout_margin="@dimen/margin_CardView"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/city3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/city1"

        card_view:cardCornerRadius="@dimen/CornerRadius_CardView"
        card_view:cardElevation="@dimen/Elevation_CardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_TextView_card"
            android:text="@string/card_city2" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/city3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_CardView"
        android:layout_margin="@dimen/margin_CardView"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/city2"
        card_view:cardCornerRadius="@dimen/CornerRadius_CardView"
        card_view:cardElevation="@dimen/Elevation_CardView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_TextView_card"
            android:text="@string/card_city3" />

    </android.support.v7.widget.CardView>

    <!-- <fragment
         android:id="@+id/choose_city"
         android:name="com.example.weather.CitiesListFragment"
         android:layout_width="@dimen/width_fragment_main_activity"
         android:layout_height="@dimen/height_fragment_main_activity"
         android:layout_marginStart="@dimen/marginStart_fragment_main_activity"
         android:layout_marginEnd="@dimen/marginEnd_fragment_main_activity"
         android:layout_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/linLay_edit_and_btn"
         app:layout_constraintVertical_bias="0.0" />
 -->

</android.support.constraint.ConstraintLayout>
